# styrecon

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: profiles.yaml  settings.example.yaml
src/styrecon/: cli.py
src/styrecon/core/: config.py  logger.py  runner.py  scope.py
src/styrecon/core/state/: db.py  diff.py  models.py
src/styrecon/modules/: discovery.py  enrichment.py  jshunt.py  scanning.py
src/styrecon/utils/: hashing.py  ids.py  io.py  normalize.py
